<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.patri.refinado.Activity.ProdutoActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_nome_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/nome"/>

            <EditText
                android:id="@+id/edt_desc_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:hint="@string/descri_o"/>

            <EditText
                android:id="@+id/edt_ean_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/ean"/>

            <EditText
                android:id="@+id/edt_referencia_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/refer_ncia"/>

            <EditText
                android:id="@+id/edt_quantidade_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/quantidade"/>

            <EditText
                android:id="@+id/edt_preco_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="numberDecimal"
                android:hint="Preço" />

            <EditText
                android:id="@+id/edt_unidade_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/unidade"/>

            <EditText
                android:id="@+id/edt_largura_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="numberDecimal"
                android:hint="@string/largura"/>

            <EditText
                android:id="@+id/edt_altura_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="numberDecimal"
                android:hint="@string/altura"/>

            <EditText
                android:id="@+id/edt_profundidade_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="numberDecimal"
                android:hint="@string/profundidade" />

            <EditText
                android:id="@+id/edt_peso_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="numberDecimal"
                android:hint="@string/peso"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp">

                <Button
                    android:id="@+id/btn_listcategoria_pr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selecionar_categorias"
                    android:layout_weight="0.5"/>

                <Button
                    android:id="@+id/btn_cancelarcate_pr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:layout_weight="0.5"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <Button
                    android:id="@+id/btn_listcores_pr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selecionar_cores"
                    android:layout_weight="0.5"/>

                <Button
                    android:id="@+id/btn_cancelarcor_pr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:layout_weight="0.5"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <Button
                    android:id="@+id/btn_listimagens_pr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selecionar_imagens"
                    android:layout_weight="0.5"/>

                <Button
                    android:id="@+id/btn_cancelarimagem_pr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:layout_weight="0.5"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_salvar_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salvar"
                android:layout_weight="1"/>
        </LinearLayout>
</ScrollView>
