<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.ConfirmacaoDadosActivity"
    tools:showIn="@layout/app_bar_confirmacao_dados">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_cidade_cf"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/cidade"
                android:inputType="text"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edt_logradouro_cf"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:ems="10"
                android:hint="@string/logradouro"
                android:inputType="text"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/edt_complemento_cf"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/complemento"
                android:inputType="text"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edt_bairro_cf"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/bairro"
                android:inputType="text|textPersonName"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/edt_numero_cf"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/numero"
                android:inputType="number"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edt_cep_cf"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/cep"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/estado"/>

            <Spinner
                android:id="@+id/spinnerEstado"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/txt_formas_cf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/formasdepagamento"/>

            <Spinner
                android:id="@+id/spinnerFormasPagamento"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/edt_nome_cf"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/nome"/>

            <EditText
                android:id="@+id/edt_sobrenome_cf"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/sobrenom_e" />

            <EditText
                android:id="@+id/edt_cpf_cf"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/cp_f" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anivers_rio"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/edt_date_cf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="25dp"
                    android:textAlignment="center"
                    android:layout_gravity="center_vertical"/>

                <ImageButton
                    android:id="@+id/btn_datalancto_cf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_search"
                    android:layout_weight="0.5"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>